--- a/introduccion.html
+++ b/introduccion.html
@@ -7,8 +7,8 @@
 
 
 	<script type="application/javascript">
-	//alert("hola mundo 2018");
-	console.log("Hola mundo 2018!!!");
+	//alert("hola mundo");
+	console.log("Hola mundo!!!");
 	</script>
 </body>
 </html>
